# workbench

./: .gitignore  .travis.yml  Doxyfile  README  README_BUGS.txt  test
src/: .CMakeLists.txt.swp  CMakeLists.txt  README  license.txt
src/Algorithms/: AbstractAlgorithm.cxx  AbstractAlgorithm.h  AlgorithmAnnotationResample.cxx  AlgorithmAnnotationResample.h  AlgorithmBorderResample.cxx  AlgorithmBorderResample.h  AlgorithmBorderToVertices.cxx  AlgorithmBorderToVertices.h  AlgorithmCiftiAllLabelsToROIs.cxx  AlgorithmCiftiAllLabelsToROIs.h  AlgorithmCiftiAverage.cxx  AlgorithmCiftiAverage.h  AlgorithmCiftiAverageDenseROI.cxx  AlgorithmCiftiAverageDenseROI.h  AlgorithmCiftiAverageROICorrelation.cxx  AlgorithmCiftiAverageROICorrelation.h  AlgorithmCiftiCorrelation.cxx  AlgorithmCiftiCorrelation.h  AlgorithmCiftiCorrelationGradient.cxx  AlgorithmCiftiCorrelationGradient.h  AlgorithmCiftiCreateDenseScalar.cxx  AlgorithmCiftiCreateDenseScalar.h  AlgorithmCiftiCreateDenseTimeseries.cxx  AlgorithmCiftiCreateDenseTimeseries.h  AlgorithmCiftiCreateLabel.cxx  AlgorithmCiftiCreateLabel.h  AlgorithmCiftiCrossCorrelation.cxx  AlgorithmCiftiCrossCorrelation.h  AlgorithmCiftiDilate.cxx  AlgorithmCiftiDilate.h  AlgorithmCiftiErode.cxx  AlgorithmCiftiErode.h  AlgorithmCiftiExtrema.cxx  AlgorithmCiftiExtrema.h  AlgorithmCiftiFalseCorrelation.cxx  AlgorithmCiftiFalseCorrelation.h  AlgorithmCiftiFindClusters.cxx  AlgorithmCiftiFindClusters.h  AlgorithmCiftiGradient.cxx  AlgorithmCiftiGradient.h  (+231 more)
src/Annotations/: Annotation.cxx  Annotation.h  AnnotationAlignHorizontalEnum.cxx  AnnotationAlignHorizontalEnum.h  AnnotationAlignVerticalEnum.cxx  AnnotationAlignVerticalEnum.h  AnnotationAlignmentEnum.cxx  AnnotationAlignmentEnum.h  AnnotationAndFile.cxx  AnnotationAndFile.h  AnnotationArrow.cxx  AnnotationArrow.h  AnnotationAttributesDefaultTypeEnum.cxx  AnnotationAttributesDefaultTypeEnum.h  AnnotationBox.cxx  AnnotationBox.h  AnnotationBrowserTab.cxx  AnnotationBrowserTab.h  AnnotationChartTwoAxisLabel.cxx  AnnotationChartTwoAxisLabel.h  AnnotationColorBar.cxx  AnnotationColorBar.h  AnnotationColorBarNumericText.cxx  AnnotationColorBarNumericText.h  AnnotationColorBarPositionModeEnum.cxx  AnnotationColorBarPositionModeEnum.h  AnnotationColorBarSection.cxx  AnnotationColorBarSection.h  AnnotationCoordinate.cxx  AnnotationCoordinate.h  AnnotationCoordinateSpaceEnum.cxx  AnnotationCoordinateSpaceEnum.h  AnnotationDistributeEnum.cxx  AnnotationDistributeEnum.h  AnnotationDrawingTypeEnum.cxx  AnnotationDrawingTypeEnum.h  AnnotationEditingSelectionInformation.cxx  AnnotationEditingSelectionInformation.h  AnnotationFontAttributes.cxx  AnnotationFontAttributes.h  (+131 more)
src/Brain/: .VolumeSliceSettings.h.swp  AnnotationArrangerExecutor.cxx  AnnotationArrangerExecutor.h  AnnotationArrangerInputs.cxx  AnnotationArrangerInputs.h  AnnotationClipboard.cxx  AnnotationClipboard.h  AnnotationManager.cxx  AnnotationManager.h  AnnotationTextSubstitutionLayer.cxx  AnnotationTextSubstitutionLayer.h  AnnotationTextSubstitutionLayerSet.cxx  AnnotationTextSubstitutionLayerSet.h  BorderDrawingTypeEnum.cxx  BorderDrawingTypeEnum.h  Brain.cxx  Brain.h  BrainConstants.cxx  BrainConstants.h  BrainOpenGL.cxx  BrainOpenGL.h  BrainOpenGLAnnotationDrawingFixedPipeline.cxx  BrainOpenGLAnnotationDrawingFixedPipeline.h  BrainOpenGLChartDrawingFixedPipeline.cxx  BrainOpenGLChartDrawingFixedPipeline.h  BrainOpenGLChartDrawingInterface.h  BrainOpenGLChartTwoDrawingFixedPipeline.cxx  BrainOpenGLChartTwoDrawingFixedPipeline.h  BrainOpenGLChartTwoDrawingInterface.h  BrainOpenGLFPVolumeObliqueDrawing.cxx  BrainOpenGLFPVolumeObliqueDrawing.h  BrainOpenGLFixedPipeline.cxx  BrainOpenGLFixedPipeline.h  BrainOpenGLFociDrawing.cxx  BrainOpenGLFociDrawing.h  BrainOpenGLHistologySliceCoordinateDrawing.cxx  BrainOpenGLHistologySliceCoordinateDrawing.h  BrainOpenGLHistologySliceDrawing.cxx  BrainOpenGLHistologySliceDrawing.h  BrainOpenGLIdentificationDrawing.cxx  (+679 more)
src/CMakeScripts/: copy_mac_frameworks.sh  copy_mac_icon.sh  copy_mac_nib.sh  git_commit_info.cmake.in  save.sh
src/CZIlib/: CMakeLists.txt  README.md
src/Charting/: 2  CMakeLists.txt  ChartAxis.cxx  ChartAxis.h  ChartAxisCartesian.cxx  ChartAxisCartesian.h  ChartAxisLocationEnum.cxx  ChartAxisLocationEnum.h  ChartAxisTypeEnum.cxx  ChartAxisTypeEnum.h  ChartAxisUnitsEnum.cxx  ChartAxisUnitsEnum.h  ChartData.cxx  ChartData.h  ChartDataCartesian.cxx  ChartDataCartesian.h  ChartDataMatrix.cxx  ChartDataMatrix.h  ChartDataMatrixCreatorInterface.h  ChartDataSource.cxx  ChartDataSource.h  ChartDataSourceModeEnum.cxx  ChartDataSourceModeEnum.h  ChartDataTypeEnum.cxx  ChartDataTypeEnum.h  ChartMatrixDisplayProperties.cxx  ChartMatrixDisplayProperties.h  ChartMatrixLoadingDimensionEnum.cxx  ChartMatrixLoadingDimensionEnum.h  ChartMatrixLoadingTypeEnum.cxx  ChartMatrixLoadingTypeEnum.h  ChartMatrixScaleModeEnum.cxx  ChartMatrixScaleModeEnum.h  ChartModel.cxx  ChartModel.h  ChartModelCartesian.cxx  ChartModelCartesian.h  ChartModelDataSeries.cxx  ChartModelDataSeries.h  ChartModelFrequencySeries.cxx  (+85 more)
src/Cifti/: CMakeLists.txt  CiftiBrainModelsMap.cxx  CiftiBrainModelsMap.h  CiftiByteSwap.h  CiftiFile.cxx  CiftiFile.h  CiftiFileException.cxx  CiftiFileException.h  CiftiHeader.cxx  CiftiHeader.h  CiftiHeaderIO.cxx  CiftiHeaderIO.h  CiftiIndexMap.cxx  CiftiIndexMap.h  CiftiInterface.cxx  CiftiInterface.h  CiftiLabelsMap.cxx  CiftiLabelsMap.h  CiftiMappingType.cxx  CiftiMappingType.h  CiftiMatrix.cxx  CiftiMatrix.h  CiftiParcelsMap.cxx  CiftiParcelsMap.h  CiftiScalarsMap.cxx  CiftiScalarsMap.h  CiftiSeriesMap.cxx  CiftiSeriesMap.h  CiftiVersion.cxx  CiftiVersion.h  CiftiXML.cxx  CiftiXML.h  CiftiXMLElements.cxx  CiftiXMLElements.h  CiftiXMLNew.cxx  CiftiXMLNew.h  CiftiXMLOld.cxx  CiftiXMLOld.h  CiftiXMLReader.cxx  CiftiXMLReader.h  (+11 more)
src/Command/: CMakeLists.txt  caret_command.cxx
src/CommandLine/: CMakeLists.txt  README.txt  bashcomplete_wb_command  bashcomplete_wb_shortcuts  caret_command.cxx  wb_command.cxx  wb_shortcuts
src/CommandOperations/: CMakeLists.txt  CommandClassCreate.cxx  CommandClassCreate.h  (+18 more)
(+3499 files in other folders)
